--- a/register.html
+++ b/register.html
@@ -28,21 +28,21 @@
 										<form action="">
 											<br>
 											<label for="fname">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;First Name:</label>
-											<input type="text" id="fname" name="firstname" placeholder="Your name.."><br><br>
+											<input type="text" id="fname" name="firstname" placeholder="Type your name"><br><br>
 											<label for="lname">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Last Name:</label>
-											<input type="text" id="lname" name="lastname" placeholder="Your surname.."><br><br>
+											<input type="text" id="lname" name="lastname" placeholder="Type your surname"><br><br>
 											<label for="dob">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Date of Birth:</label>
 											<input type="date" id="datebirth" value="2017-01-01"><br><br>
 											<label for="telephone">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Telephone:</label>
-											<input type="tel" id="telNo" name="usertel" placeholder="Telephone number.."><br><br>
+											<input type="tel" id="telNo" name="usertel" placeholder="Type telephone number"><br><br>
 											<label for="address">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Address:</label>
-											<input type="text" id="address" name="address" placeholder="Address.."><br><br>
+											<input type="text" id="address" name="address" placeholder="Type address"><br><br>
 											<label for="mail">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;E-mail:</label>
 											<input type="email" id="mail" name="email" placeholder="example@domain.com"><br><br>
 											<label for="username">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;User name:</label>
-											<input type="text" id="uname" name="username" placeholder="Username .."><br><br>
+											<input type="text" id="uname" name="username" placeholder="Type username"><br><br>
 											<label for="pass">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Password:</label>
-											<input type="password" id="pass" name="password" placeholder="Password .."><br><br>
+											<input type="password" id="pass" name="password" placeholder="Type password"><br><br>
 											&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 											<input type="submit" value="Create Account">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 											<input type="reset" value="Reset">
