--- a/total.html
+++ b/total.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<title>Dance Academy Cyprus</title>
-	<meta charset="utf-8">,
+	<meta charset="utf-8">
 	<!--<link href="css/style.css" rel="stylesheet" type="text/css">-->
 	<link href="css/style_PayC_LogIn.css" rel="stylesheet" type="text/css">
 	<!--[if IE 6]>
@@ -18,23 +18,33 @@
 	<div id="page">
 		<div id="header">
 			<div class="header"> <a id="logo" href="index.html"><img  src="logo.jpg" width="600" alt="Dance Studio" title="Dance Studio"> </a>
-				<div class="slogan">
-					<h1><strong>Logged on Succesfully</strong> </h1>
-				</div>
 			</div>
 		</div>
 		<div id="body">
 			<div id="sidebar">
 				<ul class="navigation">
-					<li><a href="payclass.html">Tuition</a></li>
-					<li><a href="index.html">THEODORA</a></li>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="register.html">Register</a></li>
-					
+					<li><a href="login.html">Log In</a></li>
 				</ul>
 				<div class="connect"> <span>Follow us:</span> <a class="facebook" href="https://www.facebook.com/dance.ac.cy/">&nbsp;</a> </div>
 			</div>
-			
+			<div id="content">
+				<ul id="featured">
+					<div id = "payclasseshead">
+<p><strong><h2>Your Total Is:</strong><h2></p>					
+						</div>
+
+
+<a href="GoToJCC.html">
+						<input type="submit" value="Ok">
+					</a>
+                    <a href="payclass.html">
+                        <input type="submit" value="Cancel">
+                    </a>
+
+				</ul>
+			</div>
 		</div>
 		<div id="footer"> <span> &copy; copyright 2017 &copy;. All rights reserved.</span> </div>
 	</div>
