--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
 
 					<div id= "submitbutton">
 					<a href="submitting.html">
-						&nbsp;&nbsp;<input type="submit" value="Submit">
+						&nbsp;&nbsp;<input type="submit" value="Login">
 					</a>
 					</div>
 
