--- a/login_wrong.html
+++ b/login_wrong.html
@@ -43,7 +43,7 @@
 
 					<div id= "submitbutton">
 					<a href="submitting.html">
-						&nbsp;&nbsp;<input type="submit" value="Submit">
+						&nbsp;&nbsp;<input type="submit" value="Login">
 					</a>
 					</div>
 
