--- a/payclass.html
+++ b/payclass.html
@@ -17,7 +17,7 @@
     <div id="background">
        <div id="page">
           <div id="header">
-             <div class="header"> <a id="logo" href="index.html"><img  src="logo.jpg" width="600" alt="Dance Studio" title="Dance Studio"> </a>
+             <div class="header"> <a id="logo" href="index.html"><img  src="logo.jpg" width="700" alt="Dance Studio" title="Dance Studio"> </a>
              </div>
          </div>
          <div id="body">
@@ -35,7 +35,7 @@
 
                 <!--<p> <strong>SHOW THE CLASSES THE USER CHOSES AND HIDE THE ONES HE DIDNT SELECT </strong></p>   --> 
 
-                <div id = "payclasseshead">
+                <div id = "payclassesheads">
                 <p> <strong><h1>Choose the Months You Would Like to Pay</h1></strong></p>	
               </div>
 
