--- a/total.html
+++ b/total.html
@@ -32,17 +32,18 @@
 			<div id="content">
 				<ul id="featured">
 					<div id = "payclasseshead">
-<p><strong><h2>Your Total Is:</strong><h2></p>					
+<p><strong><h2>Your Total Is:</strong><h2></p>		
+<p><strong><h2>€</strong><h2></p>			
 						</div>
 
-
-<a href="GoToJCC.html">
+<div id="total_form">
+<a href="https://www.jccsmart.com/account/log-on?ReturnUrl=%2Faccount">
 						<input type="submit" value="Ok">
 					</a>
                     <a href="payclass.html">
                         <input type="submit" value="Cancel">
                     </a>
-
+</div>
 				</ul>
 			</div>
 		</div>
